--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/jffelix/Branches-Blog-React#readme",
   "dependencies": {
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "firebase": "^9.6.10",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
