--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "path": "^0.12.7",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
