--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules
 
 /client/src/firebase.config.js
 
-.env.local
+/client/src/.env.local
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
