--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "firebase": "^9.6.10",
+    "mongoose": "^6.2.10",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "react": "^18.0.0",
